- Created ReliableUnicast, UNICAST4 (https://issues.redhat.com/browse/JGRP-2843) - Added add(List<Tuple>...) to Buffer and implementations, plus tests - Added UNICAST4 to UnicastUnitTest - UNICAST3_Test -> UNICAST_Test (also tests UNICAST4) - Added UNICAST4 to UNICAST_ConnectionTests - Added UNICAST4 to UNICAST_ContentionTest - Added UNICAST4 to UNICAST_OOB_Test - Added UNICAST4 to UNICAST_MessagesToSelfTest - Added UNICAST4 to UNICAST_DropFirstAndLastTest - Added REVERSE2 - Simplified MessageCache (used by UNICAST-X protocols) - Fixed serialization of Average - Fixed getReceiverEntry() (https://issues.redhat.com/browse/JGRP-2852) - Added new MockTransport - Added tests to ReliableUnicastTest (https://issues.redhat.com/browse/JGRP-2852) - Changed ReliableUnicast.up(MessageBatch): conn-ids are handled after removing unicast messages from the batch into a hashmap (https://issues.redhat.com/browse/JGRP-2852)